# AresUnityDemo

./: README.md  UpgradeLog.htm
AresGameInput/: .gitignore  CMakeLists.txt  compile_cmake.sh  compile_gcc.sh  main.cpp
AresGameInput/core/: InputHandler.cpp  InputHandler.h
AresGameInput/logger/: Logger.cpp  Logger.h
AresGameInput/network/: MessageReceiver.cpp  MessageReceiver.h  MessageSender.cpp  MessageSender.h
AresGameInput/protocol/: Command.cpp  Command.h
AresUnityDemo/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
AresUnityDemo/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Assets/Materials/: Ground_M.mat  Projectile_M.mat  Target_2_M.mat  Target_3_M.mat
Assets/Materials/Targets/: Target_1_M.mat
Assets/Prefabs/: Projectile_1.prefab  Projectile_2.prefab  SpawnArea.prefab  Tank.prefab  Target_1.prefab  Target_2.prefab  Target_3.prefab
Assets/Prefabs/Player/: Tank.prefab
Assets/Prefabs/Projectiles/: Projectile_2.prefab
Assets/Prefabs/Targets/: Target_1.prefab  Target_2.prefab  Target_3.prefab
Assets/Scenes/: AresUnityDemo.unity  GameScene.unity
Assets/Scripts/: CircularMovement.cs  CombinedGameStarter.cs  GameManager.cs  IDrive.cs  IMovementPattern.cs  IShooter.cs  InputManager.cs  Projectile.cs  SineWaveMovement.cs  SpawnManager.cs  TankController.cs  Target.cs  TargetInitializer.cs  TargetManager.cs  TimerService.cs  TurretAim.cs  TurretController.cs  TurretShooter.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
ProjectSettings/: ProjectSettings.asset
(+31 files in other folders)
